platform/observability/dozzle/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dozzle
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dozzle.mso.lol`)
      kind: Rule
      middlewares:
        - name: chain-auth
          namespace: traefik
      services:
        - name: dozzle
          port: 8080
  tls:
    certResolver: cloudflare
